--- a/public/assets/css/style-liberty.css
+++ b/public/assets/css/style-liberty.css
@@ -15163,7 +15163,7 @@ a.view:hover {
 
 .w3l-main-slider .banner-top1 {
   /* background: url("../images/banner2.jpg") no-repeat center; */
-  background: url(../images/Teaser\ 1\ Chandak.jpeg) no-repeat center;
+  background: url(../images/carousal-1.jpeg) no-repeat center;
   background-size: cover;
   min-height: 100vh;
 }
