--- a/public/assets/css/style-liberty.css
+++ b/public/assets/css/style-liberty.css
@@ -15869,8 +15869,11 @@ a.hnys-title:hover {
 }
 
 .w3l-how-grids-3 .grid-bg1 {
+  width: 560px;
+  height: 500px;
   /* background: url(../images/banner2.jpg) no-repeat center; */
-  background: url(../images/railway.jpeg) no-repeat center;
+  /* background: url(../images/railway.jpeg) no-repeat center; */
+  background: url(../images/Hnet.com-image\ \(1\).jpg) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -15885,8 +15888,10 @@ a.hnys-title:hover {
 }
 
 .w3l-how-grids-3 .grid-bg2 {
+  width: 560px;
+  height: 500px;
   /* background: url(../images/banner4.jpg) no-repeat center; */
-  background: url(../images/metro\ wholesale.jpeg) no-repeat center;
+  background: url(../images/Hnet.com-image\ \(2\).jpg) no-repeat center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -15901,8 +15906,11 @@ a.hnys-title:hover {
 }
 
 .w3l-how-grids-3 .grid-bg3 {
+  width: 360px;
+  height: 360px;
   /* background: url(../images/g1.jpg) no-repeat center; */
   background: url(../images/school.jpeg) no-repeat center;
+  /* background: url(../images/Hnet.com-image\ \(3\).jpg) no-repeat center; */
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -15917,6 +15925,8 @@ a.hnys-title:hover {
 }
 
 .w3l-how-grids-3 .grid-bg4 {
+  width: 360px;
+  height: 360px;
   /* background: url(../images/g2.jpg) no-repeat center; */
   background: url(../images/hospital.jpeg) no-repeat center;
   background-size: cover;
@@ -15933,6 +15943,8 @@ a.hnys-title:hover {
 }
 
 .w3l-how-grids-3 .grid-bg5 {
+  width: 360px;
+  height: 360px;
   /* background: url(../images/g3.jpg) no-repeat center; */
   background: url(../images/magathane\ metro.jpeg) no-repeat center;
   background-size: cover;
@@ -15993,6 +16005,11 @@ a.hnys-title:hover {
   z-index: 1;
 }
 
+.properties .container{
+  width : "1256px";
+  margin : "auto"
+}
+
 .w3l-how-grids-3 .margin-top {
   margin-top: 20px;
 }
@@ -16033,7 +16050,13 @@ a.hnys-title:hover {
   grid-template-columns: 1fr 1fr;
 }
 
+.properties-2-box , .properties-3-box{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media (max-width: 1080px) {
+
   .w3l-how-grids-3 .left-grid-ele-9 {
     padding: 90px 40px 85px;
   }
@@ -16060,12 +16083,40 @@ a.hnys-title:hover {
 }
 
 @media (max-width: 667px) {
+
   .w3l-how-grids-3 .left-grid-ele-9 {
     padding: 65px 20px 65px;
   }
 
   .w3l-how-grids-3 h4.text-grid-9 a {
     font-size: 30px;
+  }
+
+  .properties .container{
+    width: 100%;
+  }
+
+  .properties .left-grid-ele-9.grid-bg1 , .left-grid-ele-9.grid-bg2{
+    width: 80%;
+    height: auto;
+  }
+
+  .properties-3-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+  }
+
+  .properties-2-box .left-grid-ele-9.grid-bg1 , .properties-2-box .left-grid-ele-9.grid-bg2{
+    width: 100%;
+    height: 350px;
+  }
+  .properties-3-box .left-grid-ele-9.grid-bg3 , .properties-3-box .left-grid-ele-9.grid-bg4 , .properties-3-box .left-grid-ele-9.grid-bg5{
+    width: 100%;
+    height: 380px;
   }
 }
 
