--- a/public/assets/css/style-liberty.css
+++ b/public/assets/css/style-liberty.css
@@ -725,8 +725,8 @@ pre code {
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  /* margin-right: -15px;
+  margin-left: -15px; */
 }
 
 .no-gutters {
@@ -6351,8 +6351,8 @@ a.close.disabled {
   top: 0;
   left: 0;
   z-index: 1040;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #000;
 }
 
@@ -6388,10 +6388,10 @@ a.close.disabled {
 .modal-body {
   position: relative;
   flex: 1 1 auto;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
-.modal-footer {
+/* .modal-footer {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -6400,11 +6400,11 @@ a.close.disabled {
   border-top: 1px solid #dee2e6;
   border-bottom-right-radius: calc(0.3rem - 1px);
   border-bottom-left-radius: calc(0.3rem - 1px);
-}
+} */
 
-.modal-footer>* {
+/* .modal-footer>* {
   margin: 0.25rem;
-}
+} */
 
 .modal-scrollbar-measure {
   position: absolute;
@@ -8334,7 +8334,7 @@ button.bg-dark:focus {
 
 .fixed-top {
   position: fixed;
-  top: 10px;
+  top: 0px;
   right: 0;
   left: 0;
   z-index: 1030;
@@ -14334,7 +14334,7 @@ a.link-style:hover:before {
 }
 
 .sub-title {
-  font-size: 16px;
+  font-size: 38px;
   font-weight: 400;
   line-height: 2em;
   color: var(--primary-color);
@@ -15152,7 +15152,8 @@ a.view:hover {
 
 .w3l-main-slider .banner-view {
   /* background: url(../images/Feel\ Greenery.jpeg) no-repeat center; */
-  background: url(../images/Greenary-1.jpg) no-repeat center;
+  /* background: url(../images/Greenary-1.jpg) no-repeat center; */
+  background: url(../images/carousal-5.jpeg) no-repeat center;
   background-size: cover;
   min-height: 100vh;
   position: relative;
@@ -15394,7 +15395,7 @@ h4.number-b {
 }
 
 .owl-carousel {
-  display: none;
+  /* display: none; */
   width: 100%;
 }
 
@@ -15870,10 +15871,11 @@ a.hnys-title:hover {
 
 .w3l-how-grids-3 .grid-bg1 {
   width: 560px;
-  height: 500px;
+  height: 449px;
   /* background: url(../images/banner2.jpg) no-repeat center; */
   /* background: url(../images/railway.jpeg) no-repeat center; */
   background: url(../images/Hnet.com-image\ \(1\).jpg) no-repeat center;
+  
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -15889,7 +15891,7 @@ a.hnys-title:hover {
 
 .w3l-how-grids-3 .grid-bg2 {
   width: 560px;
-  height: 500px;
+  height: 449px;
   /* background: url(../images/banner4.jpg) no-repeat center; */
   background: url(../images/Hnet.com-image\ \(2\).jpg) no-repeat center;
   background-size: cover;
@@ -19344,7 +19346,9 @@ form.signin-form {
   color: #fff;
   border-radius: 0;
 }
-
+.shadow{
+  box-shadow: 5px 10px #888888;
+}
 .w3l-footer .subscribe button:hover {
   transition: all .5s ease;
   background: var(--secondary-color);
@@ -19484,6 +19488,8 @@ form.signin-form {
 }
 
 .call-btn{
+  margin: auto;
+  /* width: 80%; */
   margin-bottom: 20px;
   border: 1px solid var(--primary-color);
   padding: 10px 15px;
@@ -19542,6 +19548,7 @@ form.signin-form {
 @media screen and (max-width: 500px) {
   .history-info .position-relative div {
     width: 300px !important;
+    margin: auto;
   }
   /* .history-info .position-relative  video{
     width: 350px !important;
@@ -19564,4 +19571,114 @@ form.signin-form {
 .footer{
   display: grid;
   place-items: center;
+}
+
+.showpopup{
+  display: block;
+}
+
+.removepopup{
+  display: none;
+}
+
+.holder1 ul li::before{
+  content: "";
+  display: inline-block;
+  margin: 19px 7px 0 1px;
+  font-size: 22px;
+  border: solid 10px;
+  border-color: transparent  transparent transparent var(--primary-color);
+}
+
+
+.contact-heading{
+  color: var(--primary-color);
+}
+
+.contact-sub-heading{
+  color: var(--font-color);
+}
+
+.contact .row .col-md-6 .row input{
+  width: 90%;
+  height: 35px;
+  /* margin: 0px 20px; */
+  margin-bottom: 40px;
+  padding: 5px;
+  border: none !important;
+  outline: none !important;
+  border-bottom:  1px solid var(--font-color) !important;
+  /* color: var(--primary-color); */
+}
+
+.contact .row .col-md-6 .row input:focus{
+  border-bottom:  1px solid var(--primary-color) !important;
+}
+
+
+.padding-side{
+  padding: 0px  100px ;
+}
+
+#Checkbox{
+  background-color: black;
+}
+
+.margin-top{
+  margin-top: 20px;
+}
+
+.margin-top p{
+  font-weight: 600;
+}
+
+.promise-sec-text{
+  text-align: center;
+  font-size: 10px !important;
+}
+
+.padding-lost{
+  padding-left: 0px !important;
+  padding-right: 0px!important;
+  margin: 10px 0px;
+}
+
+.openmodalclick .modal-body.row{
+  padding: 0px !important;
+}
+
+/* .contact{
+  margin: 120px 0px;
+} */
+
+.modal-subheading{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+@media screen and (max-width : 576px) {
+  .padding-side{
+    padding: 10px;
+  }
+  
+  .contact .row .col-md-6 .row input{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+
+  .contact{
+    margin: 60px 0px;
+  }
+    
+}
+
+@media screen and (max-width: 768px){
+  .wePromise{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
