--- a/public/assets/css/style-liberty.css
+++ b/public/assets/css/style-liberty.css
@@ -19472,7 +19472,6 @@ form.signin-form {
 }
 
 
-/*# sourceMappingURL=style-freedom.css.map */
 
 .modal{
   top: 50%;
@@ -19681,4 +19680,50 @@ form.signin-form {
     justify-content: center;
     align-items: center;
   }
+}
+
+.banner{
+  background-color:  #f3eada;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.banner h1{
+  font-size: 35px;
+  /* color: white; */
+  line-height: 2.5;
+}
+
+.btn-new-style{
+  padding: 10px 15px;
+}
+
+@media screen and (max-width: 576px) {
+  .banner h1{
+    font-size: 25px;
+    text-align: center;
+    line-height: 1.3;
+  }
+  .btn-center{
+    display: grid;
+    place-items: center;
+  }
+}
+
+.thankyou{
+  height: 100vh;
+}
+
+.thankyou .container{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.thankyou .container h2 {
+  text-align: center;
+  line-height: 1.5;
 }
